# itglue-py

./: .gitignore  LICENSE.txt  README.md  README.rst  pyproject.toml  requirements.txt  setup.py
itglue/: __init__.py  connection.py  path_processor.py  resources.py  utils.py
itglue/tests/: test_resource.py
